# RTWeatherForecast

./: .env.sample  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  weather-report.yml
docs/: index.md
examples/: itinerary.sample.csv
scripts/: run_daily_update.sh
src/weather_update/: __init__.py  cli.py  config.py  itinerary.py  models.py  notion.py  open_meteo.py  renderers.py  router.py  service.py  slack.py
tests/: test_config.py  test_itinerary.py  test_notion.py  test_open_meteo.py  test_open_meteo_climate.py  test_open_meteo_geocode.py  test_open_meteo_seasonal.py  test_renderers.py  test_service.py  test_slack.py
